--- a/capitulos/abstract.tex
+++ b/capitulos/abstract.tex
@@ -10,4 +10,4 @@
     In accordance with the characteristics of the place, the assembly of said system is carried out, facilitating the control of the state of the pieces and providing the center's specialists with the necessary data for decision-making in the face of future events. This system can be used in subsequent projects related to the supervision of objects, facilitating the visualization of their status and early warning in the event of possible effects.}
 
 
-    \textbf{\textit{Key-Words:} }
+    \textbf{\textit{Key-Words: Internet of Things, Management of Cultural Heritage}} 
