--- a/capitulos/carátula2.tex
+++ b/capitulos/carátula2.tex
@@ -19,18 +19,18 @@
 \begin{center}
     \textbf{\large
         Título\\
-        (Escribir título aquí)}
+        Diseño e implementación de un sistema basado en IoT para la supervisión de las variables medioambientales en la Colección de Arte y Arqueología "Francisco Prat Puig"}
     \vspace{0.5cm}
 
     \textbf{\large Autor\\
-    Miguel Á. Zayas Barbán}
+    Miguel Ángel Zayas Barbán}
     \vspace{0.5cm}
 
     \textbf{\large Tutor\\
     M.Sc. Angel Antonio Ravelo Batista}
 
     \vfill
-    \textbf{\large Diciembre, 2022}   
+    \textbf{\large Noviembre, 2022}   
 \end{center}
 
  
