--- a/capitulos/listado.tex
+++ b/capitulos/listado.tex
@@ -2,5 +2,23 @@
 \addcontentsline{toc}{section}{Listado de símbolos, términos especiales y abreviaturas no normalizadas}
     \textbf{\Large Listado de símbolos, términos especiales y abreviaturas no normalizadas}\newline
 
+    \textbf{IoT} - Internet de las Cosas o Internet of Things
+    \newline
+    \textbf{BLE} - Bluetooth Low Energy
+    \newline
+    \textbf{Wifi} - Protocolo de Transmisión de Datos de Forma Inalámbrica
+    \newline
+    \textbf{PIR} - Passive Infrared Sensor
+    \newline
+    \textbf{RFID} - Radio Frequency Identification
+    \newline
+    \textbf{MQTT} - Message Queing Telemetry Transport
+    \newline
+    \textbf{HTTP} - Hypertext Transfer Protocol
+    \newline
+    \textbf{GPIO} - ...
+    \newline
+    \textbf{ESP} - ...
+    
     \setcounter{page}{1}
     \thispagestyle{plain}
