--- a/ref.bib
+++ b/ref.bib
@@ -542,9 +542,101 @@ Internet of things CISCO
   pages           = {14-25}
 }
 
-@article{ripa2004termitas,
-  title={Termitas y otros insectos xil{\'o}fagos en Chile: especies, biolog{\'\i}a y manejo.},
-  author={Ripa, Renato and Luppichini, Paola and Krecek, Jan and Lenz, Michael and Creffield, Jim W and others},
-  year={2004},
-  publisher={Instituto de Investigaciones Agropecuarias (Chile). La Cruz}
+@article{patrimonioCultural_Identidad,
+  author          = {M. A. Pérez},
+  journal         = {Ediciones Boloña},
+  title           = {Patrimonio cultural e identidad (E. Boloña, Ed.)},
+  year            = {2004}
+}
+
+@article{gestionPatrimonioCultural,
+  author          = {L. L. M. Morales},
+  journal         = {Escuela Latinoamericana de Cooperacion y Desarrollo},
+  title           = {Gestion del patrimonio cultural y cooperación internacional},
+  year            = {2011}
+}
+
+@article{weber,
+  author          = {R. H. Weber},
+  journal         = {Computer law and security review},
+  number          = {26},
+  title           = {Internet of things-new security and privacy challenges},
+  volume          = {1},
+  year            = {2010}
+}
+
+@article{maksimovic,
+  author          = {M. Maksimovic y M. Cosovic},
+  journal         = {18th International symposium infoteh-jahorina (infoteh)},
+  title           = {Preservation of cultural heritage sites using iot},
+  pages           = {1-4},
+  year            = {2019}
+}
+
+@article{shan,
+  author          = {J. Shah y B. Mishra},
+  journal         = {International conference on wireless communications, signal processing and networking (wispnet)},
+  title           = {Customized iot enabled wireless sensing and monitoring platform for preservation of artwork in heritage buildings.},
+  pages           = {361-366},
+  year            = {2016}
+}
+
+@article{marshall,
+  author          = {M. T. Marshall},
+  journal         = {Fith international conference on internet of things: Systems, management and security},
+  title           = {Interacting with heritage: On the use and potential of iot within the cultural heritage sector},
+  pages           = {15-22},
+  year            = {2018}
+}
+
+@article{ghosh,
+  author          = {S. Ghosh, A. Roy y S. Saha},
+  journal         = {International conference on recent trends on electronics, information, communication and technology (rteict)},
+  title           = {A low cost virtual guide for next generation smart museums.},
+  pages           = {845-849},
+  year            = {2021}
+}
+
+@article{rao,
+  author          = {A. S. Rao, A. V. Sharma, y C. S. Narayan},
+  journal         = {2nd International multidisciplinary conference on computer and energy science (splitech)},
+  title           = {A context aware system for an iot-based smart museum.},
+  pages           = {1-5},
+  year            = {2017}
+}
+
+@article{alletto,
+  author          = {S. Alletto y cols.},
+  journal         = {IEEE Internet of Things Journal},
+  number          = {3},
+  title           = {An indoor location-aware system for an iot-based smart museum.},
+  volume          = {2},
+  year            = {2015},
+  pages           = {244-253}
+}
+
+@article{alsuhly,
+  author          = {G. Alsuhly y A. Khattab},
+  journal         = {International conference on computer and applications (icca)},
+  title           = {An iot monitoring and control platform for museum content conservation.},
+  year            = {2018},
+  pages           = {196-201}
+}
+
+@article{spachos,
+  author          = {P. Spachos y K. N. Plataniotis},
+  journal         = {IEEE Systems Journal},
+  number          = {14},
+  title           = {Ble beacons for indoor positioning at an interactive iot-based smart museum.},
+  volume          = {3},
+  year            = {2020},
+  pages           = {3483-3493}
+}
+
+@article{lopezmartinez,
+  author          = {A. Lopez-Martínez, C. A. Iglesias y A. Carrera},
+  journal         = {16th international conference on intelligent environments (ie)},
+  title           = {Gamifid smart objects for museums based on automatically generated quizzes exploting linked data.},
+  year            = {2020},
+  pages           = {132-139}
 }
